[gd_scene load_steps=5 format=3 uid="uid://cudvtwx4udu0g"]

[ext_resource type="Texture2D" uid="uid://bkvemi8m57bgy" path="res://Assets/desk.png" id="1_avama"]
[ext_resource type="Script" path="res://DeskScene.gd" id="1_h0qd3"]
[ext_resource type="Texture2D" uid="uid://bhfmmih47cxek" path="res://Assets/MonitorOff.png" id="6_k3fy7"]
[ext_resource type="Texture2D" uid="uid://dpo43bmoryopr" path="res://Assets/GoBack2.png" id="7_tkfwf"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h0qd3")

[node name="MonitorGoBackButton" type="Button" parent="."]
visible = false
offset_left = 16.0
offset_top = 135.0
offset_right = 248.0
offset_bottom = 356.0
scale = Vector2(0.095, 0.095)
button_mask = 3

[node name="DeurButton" type="Button" parent="."]
offset_left = 186.0
offset_top = 25.0
offset_right = 308.0
offset_bottom = 92.0
button_mask = 2
flat = true

[node name="MonitorButton" type="Button" parent="."]
offset_left = 86.0
offset_top = 44.0
offset_right = 231.0
offset_bottom = 126.0
button_mask = 3

[node name="Desk" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("1_avama")

[node name="Monitor" type="Sprite2D" parent="."]
position = Vector2(158.5, 85)
scale = Vector2(0.453125, 0.455556)
texture = ExtResource("6_k3fy7")

[node name="DeurGoBackButton" type="Button" parent="."]
visible = false
offset_left = 50.0
offset_top = 1.0
offset_right = 227.0
offset_bottom = 121.0
scale = Vector2(0.095, 0.095)
button_mask = 3
icon = ExtResource("7_tkfwf")

[connection signal="pressed" from="MonitorGoBackButton" to="." method="_on_monitor_go_back_button_pressed"]
[connection signal="pressed" from="DeurButton" to="." method="_on_deur_button_pressed"]
[connection signal="pressed" from="MonitorButton" to="." method="_on_monitor_button_pressed"]
[connection signal="pressed" from="DeurGoBackButton" to="." method="_on_go_back_button_pressed"]
